@@ -1,5 +1,12 @@
 2005-06-23  Peter Bienstman  <Peter.Bienstman@UGent.be>
 
+	* def.h: Allow to turn off cavity coherence.
+	* defs.cpp: Ditto.
+	* cavity.cpp: Ditto.
+	* camfr_wrap.cpp: Ditto.
+
+2005-06-23  Peter Bienstman  <Peter.Bienstman@UGent.be>
+
 	* camfr_wrap.cpp: Wrap extra BlochSection functions.
 
 2005-06-13  Peter Debackere  <Peter.Debackere@UGent.be>
